Add support for pydantic v2 following the approach seen in pull-request https://github.com/SupImDos/pydantic-argparse/pull/49 .

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ include = [
 
 [tool.poetry.dependencies]
 python = "^3.9"
-pydantic = "^1.9.0"
+pydantic = ">=1.9.0"
 
 [tool.poetry.group.dev.dependencies]
 poethepoet = "^0.12.2"
